[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }

[dev-dependencies]
criterion = "0.3"
lox-syntax = { git = "https://github.com/Darksecond/lox" }

[[bench]]
name = "vs_rlox_without_borrow"
harness = false

[profile.release]
debug = true
lto = "fat"